--- a/src/Popup/index.css
+++ b/src/Popup/index.css
@@ -1,23 +1,25 @@
 .modal {
     display: grid;
-    /* grid-template-rows:1fr 3fr; */
 }
 
 
 .modal >div {
     display: grid;
+    grid-template-rows: 200px 300px 200px;
     grid-template-columns: 30% 30% 30%;
+
 }
 
-.modal button {
-    /* justify-self: end; */
-    grid-column:3;
-    align-self:end;
+.modal button { 
+    grid-row:1;
+    align-self: end;
+    grid-column-start: 3;
     width:30px;
-    height:30px;
+    height: 30px;
 }
 
 
-.modal >img {
-    
+.modal img {
+    grid-row:2;
+    grid-column: 2;
 }
